force-app/websites/me/objects/Contact_Message__c/Contact_Message__c.object-meta.xml
<CustomObject>
    <description
  >Messages submitted through the site's "Get In Touch" contact form.</description>
    <label>Contact Message</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>