force-app/websites/me/objects/Contact_Message__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>