force-app/websites/me/objects/Contact_Message__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Text</type>
    <length>80</length>
</CustomField>